# DEX

./: .env.template  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  Readme.md  SECURITY.md  SUPPORT.md  TODO.md  TRADEMARK_POLICY.md  docker-compose.yml  mermaid-test.md  mkdocs.yml  mypy.ini  poe_tasks.toml  prometheus.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CHECKLISTS.md  MAINTAINER_PLAYBOOK.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/agents/: backend-engineer.agent.md  code-reviewer.agent.md  data-engineer.agent.md  devops-engineer.agent.md
.github/instructions/: data-pipelines.instructions.md  fastapi.instructions.md  infrastructure.instructions.md  ml.instructions.md  python.instructions.md  testing.instructions.md  workflows.instructions.md
.github/prompts/: code-review.prompt.md  debug.prompt.md  fix-lint.prompt.md  new-dag.prompt.md  new-endpoint.prompt.md  new-feature.prompt.md  new-issue.prompt.md  pr-description.prompt.md  refactor.prompt.md  write-tests.prompt.md
.github/workflows/: README.md  WORKFLOWS_GUIDE.md  cd.yml  ci.yml  copilot-auto-approve-pr.yml  copilot-auto-approve.yml  docs-pages.yml  label-sync.yml  package-validation.yml  pr-preview.yaml  pr-preview.yaml.disabled  preview-deploy.yml  project-automation.yml  pypi-publish.yml  release-careerdex.yml  release-dataenginex.yml  release.yml  security.yml  sonar-scan.yml  sonar-scan.yml.disabled
api-collection/: bruno.json
api-collection/core/: echo.bru  root.bru
api-collection/docs/: openapi-yaml.bru
api-collection/environments/: local.bru
api-collection/health/: health.bru  ready.bru  startup.bru
api-collection/observability/: metrics.bru
api-collection/v1-data/: list-sources.bru  quality-summary.bru
api-collection/v1-system/: config.bru
api-collection/v1-warehouse/: get-lineage.bru  list-layers.bru
app/: main.py
docs/: ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  DEPLOY_RUNBOOK.md  DEVELOPMENT.md  LOCAL_K8S_SETUP.md  LOGGING.md  OBSERVABILITY.md  PROJECT_MANAGEMENT.md  PROMOTION_WORKFLOW.md  README.md  RELEASE_NOTES.md  SDLC.md  docs-hub.md  index.md  monitoring.md  release-pr-template.md
docs/adr/: 0000-template.md  0001-medallion-architecture.md
docs/api-reference/: api.md  core.md  data.md  index.md  lakehouse.md  middleware.md  ml.md  warehouse.md
docs/careerdex/: README.md  index.md
docs/roadmap/: project-roadmap.csv  project-roadmap.json
docs/weather/: README.md  index.md
examples/: 01_hello_pipeline.py  02_api_quickstart.py  03_quality_gate.py  04_ml_training.py  README.md
infra/: README.md
infra/alertmanager/: alertmanager.yml
infra/argocd/: application.yaml
infra/argocd/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
infra/grafana/: README.md
infra/grafana/dashboards/: dex-logs.json  dex-metrics.json  dex-traces.json
infra/monitoring/: alertmanager.yml  prometheus.yml
infra/monitoring/alerts/: dataenginex-alerts.yml  pipeline-alerts.yml
infra/monitoring/grafana/: README.md
infra/prometheus/alerts/: dataenginex-alerts.yml
learning/: README.md  __init__.py  async_dependency_injection.py  async_http_client.py  context_managers.py  strict_decorators.py  var_len_args.py  yield_keyword.py
ml/: __init__.py
ml/weather/: README.md  __init__.py
pipelines/weather/: DELIVERABLES.txt  EXECUTION_CHECKLIST.md  FINAL_SUMMARY.txt  INDEX.md  ML_GUIDE.txt  ML_IMPLEMENTATION_SUMMARY.txt  ML_README.md  README.txt  START_HERE.md  STRUCTURE.txt  __init__.py  deploy.py
pipelines/weather/config/: job_config.json
pipelines/weather/core/: __init__.py  pipeline.py
pipelines/weather/ml/: __init__.py  ml_utils.py
pipelines/weather/notebooks/: __init__.py  analyze_predictions.ipynb  analyze_predictions.py  extract_weather.py  feature_engineering.ipynb  feature_engineering.py  load_weather.py  train_model.ipynb  train_model.py
scripts/: README.md  get-tags.ps1  get-tags.sh  promote.ps1  promote.sh
src/careerdex/: README.md  __init__.py
src/careerdex/api/: __init__.py  main.py
src/careerdex/core/: __init__.py  notifier.py
src/careerdex/dags/: __init__.py  job_ingestion_dag.py
src/careerdex/models/: __init__.py
src/careerdex/phases/: __init__.py  phase1_foundation.py  phase2_job_ingestion.py  phase3_embeddings.py  phase4_ml_models.py  phase5_api_services.py  phase6_testing_deployment.py
src/dataenginex/: __init__.py  errors.py  health.py  logging_config.py  main.py  metrics.py  metrics_middleware.py  middleware.py  schemas.py  tracing.py
src/dataenginex/api/: __init__.py  auth.py  errors.py  health.py  main.py  rate_limit.py
src/dataenginex/core/: __init__.py  medallion_architecture.py  pipeline_config.py  validators.py
src/dataenginex/data/: connectors.py  profiler.py  registry.py
src/dataenginex/lakehouse/: __init__.py  catalog.py  partitioning.py  storage.py
src/dataenginex/middleware/: logging_config.py
src/dataenginex/ml/: drift.py  registry.py  (+2 more)
src/pyconcepts/: __init__.py  async_dependency_injection.py  async_http_client.py  context_managers.py  external_data.py  insights.py  strict_decorators.py  var_len_args.py  yield_keyword.py
src/weatherdex/: __init__.py  deploy.py
tests/: conftest.py  test_e2e_api.py  test_logging.py  test_main.py  test_metrics.py  test_middleware.py  test_tracing.py  test_validation.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_api_contracts.py  test_e2e_api.py
tests/unit/: __init__.py  test_api_extensions.py  test_data.py  test_errors.py  test_health.py  test_lakehouse.py  test_logging.py  test_main.py  test_medallion.py  test_metrics.py  test_middleware.py  test_ml.py  test_quality.py  test_spark_fixtures.py  test_tracing.py  test_validation.py  test_validators.py  test_warehouse.py
workflows/: __init__.py
workflows/weather/: README.md  __init__.py
(+29 files in other folders)
