
[project]
name = "DataEngineX"
version = "0.2.0"
description = ""
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pyspark>=4.1.1",
    "databricks-cli",
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    "prometheus-client>=0.24.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4",
    "pandas>=3.0",
    "httpx>=0.28.0",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20260107",
    "ruff>=0.15.0",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "uv>=0.10.0",
    "poethepoet>=0.40.0",
]
dex = [
    "pyspark>=4.1.1",
    "databricks-cli",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DataEngineX"
version = "0.1.0"
description = ""
authors = ["Jay"]
license = "MIT"
package-mode = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true


[tool.poetry.scripts]
# CLI entry using short form `dex` pointing to FastAPI app for convenience
dex = "dataenginex.main:app"

[tool.uv]
# Prefer uv-managed Python to avoid Windows Store Python issues during locking/sync.
python-preference = "only-managed"
default-groups = ["dev", "dex"]



[[tool.poetry.packages]]
include = "dataenginex"
from = "src"

# -----------------------
# Pytest configuration
# -----------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

# -----------------------
# Coverage configuration
# -----------------------
[tool.coverage.run]
branch = true
source = ["dataenginex"]

[tool.coverage.report]
show_missing = true
skip_covered = true