
[project]
name = "DataEngineX"
version = "0.3.2"
description = "Core framework for data engineering projects"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "Readme.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    "prometheus-client>=0.24.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.0",
    "loguru>=0.7.3",
    "email-validator>=2.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20260107",
    "poethepoet>=0.40.0",
    "uv>=0.10.0",
]
data = [
    "pyspark>=4.1.1",
    "databricks-cli",
    "apache-airflow>=2.8.0",
    "requests>=2.32.0",
]
notebook = [
    "ipykernel>=7.2.0",
    "numpy>=2.4",
    "pandas>=3.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DataEngineX"
version = "0.3.2"
description = "Core framework for data engineering projects"
authors = ["Jay"]
license = "MIT"
package-mode = true

[[tool.poetry.packages]]
include = "dataenginex"
from = "src"

[[tool.poetry.packages]]
include = "careerdex"
from = "src"

[[tool.poetry.packages]]
include = "weatherdex"
from = "src"

[tool.poetry.scripts]
dex = "dataenginex.api.main:app"

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev", "data", "notebook"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.per-file-ignores]
"src/weatherdex/notebooks/*.py" = ["F821"]    # Databricks globals: spark, display, dbutils
"src/weatherdex/notebooks/*.ipynb" = ["F821", "E501"] # Databricks globals + notebook formatting

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["structlog.*", "loguru.*", "prometheus_client.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["dataenginex", "careerdex", "weatherdex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
