
[project]
name = "careerdex-app"
version = "0.3.5"
description = "CareerDEX application built on the DataEngineX core package"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "Readme.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "dataenginex>=0.3.5,<0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20260107",
    "poethepoet>=0.40.0",
    "uv>=0.10.0",
]
data = [
    "pyspark>=4.1.1",
    "databricks-cli",
    "apache-airflow>=2.8.0",
    "requests>=2.32.0",
]
notebook = [
    "ipykernel>=7.2.0",
    "numpy>=2.4",
    "pandas>=3.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[[tool.poetry.packages]]
include = "careerdex"
from = "src"

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]

[tool.uv.sources]
dataenginex = { path = "packages/dataenginex", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.per-file-ignores]
"src/weatherdex/notebooks/*.py" = ["F821"]    # Databricks globals: spark, display, dbutils
"src/weatherdex/notebooks/*.ipynb" = ["F821", "E501"] # Databricks globals + notebook formatting

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["structlog.*", "loguru.*", "prometheus_client.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "packages/dataenginex/src"]
filterwarnings = [
    "error",                                          # Treat all warnings as errors by default
    "ignore::DeprecationWarning:websockets\\.legacy",  # uvicorn uses deprecated websockets.legacy API
    "ignore::DeprecationWarning:uvicorn\\.protocols",  # uvicorn imports deprecated WebSocketServerProtocol
]

[tool.coverage.run]
branch = true
source = ["dataenginex", "careerdex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
